# SecPatchLab

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py
docker/: seccomp-secpatchlab.json  validator-entrypoint.sh  validator.Dockerfile
docs/: correctness-evaluation.md  limitations.md  threat-model.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
secpatchlab/: cli.py
secpatchlab/core/: dpkg.py  models.py  oval.py  scan.py  storage.py  utils.py  validation.py
secpatchlab/reporting/: __init__.py  sarif.py  sbom.py
tests/: test_dpkg.py  test_oval_parse.py  test_version_semantics.py  test_wsl_utils.py
tests/fixtures/: sample_oval.xml
